@@ -1,3 +1,7 @@
+2003-03-27  Paul Stoffregen <paul@pjrc.com>
+
+	* src/SDCCpeeph.c (pcDistance): accurate byte distance for mcs51
+
 2003-03-26    <johan@balder>
 
 	* src/mcs51/gen.c (saveRegisters): catched symbol abuse
